--- a/style.css
+++ b/style.css
@@ -7,10 +7,12 @@ body {
     height: 100vh;
 }
 header {
+    margin-bottom: 15px;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content:center;
+    font-family:cursive;
 }
 .kittenImages {
     width: 300px;
@@ -19,6 +21,8 @@ header {
 }
 header > h1 {
     color: rgba(16, 13, 186, 0.641);
+    font-weight: 700;
+    font-size: 55px;
 }
 #headerImage {
     border-radius: 50%;
@@ -27,7 +31,10 @@ header > h1 {
     color: rgba(149, 20, 61, 0.674);
 }
 li, p {
-    color: rgb(0, 220, 59)
+    color: rgb(0, 220, 59);
+    font-size: 18px;
+    font-style: italic;
+    font-family: 'Times New Roman', Times, serif;
 }
 main {
     display: flex;
@@ -35,4 +42,14 @@ main {
     align-items: center;
     justify-content: center;
     align-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 22px;
+}
+.thingsI {
+    display: flex;
+    flex-direction: row;
+    background-color: rgb(255,255,255,0.35);
+    align-items: center;
+    justify-content: center;
 }
